--- a/packages/design-system/src/components/TextAreaField/style.scss
+++ b/packages/design-system/src/components/TextAreaField/style.scss
@@ -11,6 +11,7 @@
   box-sizing: border-box;
   transition: border 0.25s ease-in-out;
   will-change: border-color;
+  background-clip: padding-box;
 
   &::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: $font-primary-color;
